--- a/WEB/package.json
+++ b/WEB/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "fhirclient": "^2.0.7",
     "install": "^0.12.2",
+    "moment": "^2.24.0",
     "npm": "^6.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
