--- a/WEB/package.json
+++ b/WEB/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
