--- a/WEB/package.json
+++ b/WEB/package.json
@@ -7,12 +7,14 @@
     "fhirclient": "^2.0.7",
     "install": "^0.12.2",
     "moment": "^2.24.0",
-    "npm": "^6.9.1",
+    "npm": "^6.9.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
