--- a/WEB/package.json
+++ b/WEB/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "fhirclient": "^2.0.7",
+    "fstream": "^1.0.12",
     "install": "^0.12.2",
     "moment": "^2.24.0",
     "npm": "^6.9.2",
@@ -15,6 +16,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux-thunk": "^2.3.0",
+    "tar": "^4.4.10",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-gyp": "^5.0.1"
   }
 }
