--- a/WEB/package.json
+++ b/WEB/package.json
@@ -9,6 +9,7 @@
     "install": "^0.12.2",
     "moment": "^2.24.0",
     "npm": "^6.9.2",
+    "numeral": "^2.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
