--- a/WEB/package.json
+++ b/WEB/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@helsenorge/toolkit": "6.0.0",
     "axios": "^0.19.0",
     "fhirclient": "^2.0.7",
     "fstream": "^1.0.12",
