--- a/WEB/package.json
+++ b/WEB/package.json
@@ -12,11 +12,13 @@
     "npm": "^6.9.2",
     "numeral": "^2.0.6",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "recharts": "^1.6.2",
+    "shards-react": "^1.0.3",
     "tar": "^4.4.10",
     "uuid": "^3.3.2",
     "victory": "^32.3.3"
