--- a/WEB/package.json
+++ b/WEB/package.json
@@ -13,6 +13,7 @@
     "numeral": "^2.0.6",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
+    "react-dates": "^20.2.5",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
     "react-redux": "^7.1.0",
