--- a/WEB/package.json
+++ b/WEB/package.json
@@ -13,9 +13,11 @@
     "numeral": "^2.0.6",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
+    "react-collapse": "^4.0.3",
     "react-dates": "^20.2.5",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
+    "react-motion": "^0.5.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
