--- a/WEB/package.json
+++ b/WEB/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "shards-react": "^1.0.3",
+    "tabbable": "^4.0.0",
     "tar": "^4.4.10",
     "uuid": "^3.3.2",
     "victory": "^32.3.3"
