Removed some unused dependencies

--- a/WEB/package.json
+++ b/WEB/package.json
@@ -7,14 +7,9 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "fhirclient": "^2.0.7",
-    "fstream": "^1.0.12",
-    "install": "^0.12.2",
     "moment": "^2.24.0",
-    "npm": "^6.10.2",
-    "numeral": "^2.0.6",
     "rc-progress": "^2.5.1",
     "react": "^16.8.6",
-    "react-burger-menu": "^2.6.10",
     "react-collapse": "^4.0.3",
     "react-dates": "^20.2.5",
     "react-dom": "^16.8.6",
@@ -22,15 +17,11 @@
     "react-motion": "^0.5.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
     "recharts": "^1.6.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "shards-react": "^1.0.3",
-    "tabbable": "^4.0.0",
-    "tar": "^4.4.10",
-    "uuid": "^3.3.2",
-    "victory": "^32.3.3"
+    "tabbable": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "node-gyp": "^5.0.1"
+    "react-scripts": "3.0.1"
   }
 }
